framec_tests/language_specific/csharp/v3_mir/positive/inside_block_comment_transition_ignored.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                /* block comment with -> $B() and => $^ */
                native();
            }
        }
}

